# Izumo

./: .gitignore  CMakeLists.txt  Canna.README  Canna.conf  ChangeLog  INSTALL.jp  Imakefile  LICENSE  README.md  accanna.h.in  configure  configure.ac  confwrapper
Izumo/: CMakeLists.txt
canna/: Imakefile  net.h  widedef.h
dic/: Imakefile
dic/cmd/: Imakefile  cmd.tmpl  crfreq.c  kpdic.c  mergewd.c  pod.c
dic/cmd/crfreq/: .cvsignore  Imakefile
dic/cmd/crxdic/: .cvsignore  Imakefile  crxdic.c
dic/cmd/crxgram/: .cvsignore  Imakefile  crxgram.c
dic/cmd/forcpp/: .cvsignore  Imakefile  forcpp.c
dic/cmd/forsort/: .cvsignore  Imakefile  forsort.c
dic/cmd/kpdic/: .cvsignore  Imakefile
dic/cmd/mergewd/: .cvsignore  Imakefile
dic/ideo/: ChangeLog  Imakefile
dic/ideo/grammar/: .cvsignore  Imakefile  gram.code  gram.goto  main.code
dic/ideo/pubdic/: .cvsignore  COPYRIGHT  Imakefile  README.pubdic+  README.txt  VERSION  a.p  h.p  k.p  m.p  n.p  pod.jmn  pubdic.p  r.p  s.p  t.p  w.p  x.p  y.p
dic/ideo/words/: .cvsignore  Imakefile  bushu.t  chimei.t  dics.dir  hojomwd.t  hojoswd.t  kanasmpl.t  katakana.t  keishiki.t  necgaiji.t  number.t  obsolete.dir  software.t  suffix.t  yuubin.t
dic/phono/: .cvsignore  Imakefile  default.kpdef  english.kpdef  jdaemon.kpdef  just.kpdef  kaisoku.kpdef  kana.kpdef  lan5.kpdef  matsu.kpdef  newjis.kpdef  romaji.kpdef  sokuon.kpdef  tut.kpdef  vje.kpdef  wx2+.kpdef
include/: RK.h  RKintern.h  cannaconf.h  ccompat.h  config.h  config.h.in  patchlevel.h  protodefs.h  stamp-h1  websocket.h
include/RKindep/: cfuncs.h  file.h
include/canna/: jrkanji.h  keydef.h  mfdef.h  pubconf.h  sysdep.h
lib/: Imakefile
lib/RK/: .cvsignore  Imakefile  RKintern.h  RKrename.h  RkBgnBun.jmn  RkBgnBun.man  RkDefine.jmn  RkDefine.man  RkDelete.jmn  RkDelete.man  RkEndBun.jmn  RkEndBun.man  RkEnlarg.jmn  RkEnlarg.man  RkFinali.jmn  RkFinali.man  RkGetDic.jmn  RkGetDic.man  RkGetKan.jmn  RkGetKan.man  RkGetLex.jmn  RkGetLex.man  RkGetSta.jmn  RkGetSta.man  RkGetYom.jmn  RkGetYom.man  RkGoto.jmn  RkGoto.man  RkInitia.jmn  RkInitia.man  RkIntro.jmn  RkIntro.man  RkLeft.jmn  RkLeft.man  RkMountD.jmn  RkMountD.man  RkNext.jmn  RkNext.man  RkNfer.jmn  RkNfer.man  (+30 more)
lib/RKindep/: .cvsignore  GSYM.awk  Imakefile  basename.c  cfuncs.c  cfuncs.exp  cksum.c  cksum.exp  cksum.h  ecfuncs.exp  ecfuncs.h  file.c  file.exp  file.h  strops.c  strops.exp  strops.h
lib/cwebsocket/: websocket.c
lib/manyo/: connect.c  connect.h  manyo.c  manyo.h  sample.c
misc/: .cvsignore  Imakefile  copyright  default.ca  default.canna  engine.cpp  is.c  rc.izumo-dist
misc/initfiles/: 1.1.canna  1.2.canna  Imakefile  fixer.canna  jdemon.canna  just.canna  lan5.canna  matsu.canna  modes.canna  sample.canna  skk.canna  tut.canna  unix.canna  verbose.canna  vje.canna  wx2+.canna
server/: .cvsignore  IR.h  IRproto.h  IRwproto.h  Imakefile  comm.c  comm.h  convert.c  izumooyashiro.c  izumowebsock.c  main.c  misc.c  server.h  server.jmn  server.man  session.c  util.c  wconvert.c
